# Hydro

./: .gitignore  lagrange_weights.m  mrfv.m
doc/: .mrfv-writeup.tex.swp  mrfv-writeup.aux  mrfv-writeup.tex
doc/literature/: .amr_tree.tex.swp  .mrfv.tex.swp  :w  binarytree.tex  mrfv.aux  mrfv.bbl  mrfv.out  mrfv.tex  parallel_fwt.tex  references.bib
doc/scripts/: .mrfv.m.swp  example2d.m  (+9 more)
ref/: lab1_for_fun.m
src/Ananke/LAVAflow/archive/LAVAflow_July082015/: CMakeLists.txt
src/Ananke/LAVAflow/archive/LAVAflow_July082015/Tests/: CurvatureOperatorTest.cxx  ScalarReadTest.cxx
src/Ananke/LAVAflow/archive/LAVAflow_July082015/libsrc/Geometry/HEMesh/: HEDataStructure.cxx
src/Ananke/LAVAflow/archive/LAVAflow_July082015/libsrc/Geometry/Primitives/: Vec3.h
src/Ananke/LAVAflow/archive/LAVAflow_July082015/libsrc/Math/: sphericalHarmonic.h
src/Ananke/LAVAflow/archive/LAVAflow_July082015/libsrc/Operators/: ContourOperator.h
src/Ananke/LAVAflow/archive/LAVAflow_July082015/libsrc/Particles/: CMakeLists.txt
src/Ananke/LAVAflow/archive/LAVAflow_July082015/prototyping/TraverseDirectories/: run_2d.py
src/Ananke/LAVAflow/archive/LAVAflow_July082015/prototyping/initialConvectionPatternPowell/: cartesian_1d.m  cartesian_1d_dedner.m
src/Ananke/LAVAflow/archive/LAVAflow_July082015/prototyping/polyhedraVolume/: integrateMonomialOverContour.m  projectPointsToPlane.m
src/Ananke/LAVAflow/archive/LAVAflow_July082015/prototyping/polyhedraVolume/writeup/: polyhedraVolume_writeup.tex.backup
src/Ananke/LAVAflow/archive/LAVAflow_July082015/prototyping/vecPrimitive/: VecTN.cxx
src/Ananke/LAVAflow/devel/branches/dfenn/: CMakeLists.txt
src/Ananke/LAVAflow/devel/branches/dfenn/Tests/: Makefile
src/Ananke/LAVAflow/devel/branches/dfenn/Tests/files/averaging/: generate_2d.m
src/Ananke/LAVAflow/devel/branches/dfenn/libsrc/Geometry/HEMesh/: HEFace.h  HEPolytope.h
src/Ananke/LAVAflow/devel/branches/dfenn/libsrc/Math/: dot.cxx  factorial.cxx
src/Ananke/LAVAflow/devel/branches/dfenn/libsrc/Mesh/: CMakeLists.txt  Mesh.cxx  Mesh.h
src/Ananke/LAVAflow/devel/branches/dfenn/libsrc/Operators/shellAveraging/: ShellAverageOperator.h
src/Ananke/LAVAflow/devel/branches/dfenn/libsrc/Operators/surfaceAveraging/: SurfaceAverageOperator.cxx
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/initialConvectionPattern/: test_poisson1dSpherical_onlyPoisson.m  velocity_sources_largeStencil.m
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/initialConvectionPatternPowell/: divergence1d.m
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/polyhedraVolume/: hypergeometricPFQ.m  unprojectPointsFromPlane.m
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/segmentUpDown/: findUsableSplit.m
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/sphericalHarmonics/: testLegendrePoly.m
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/vecPrimitive/: VecTN.h
src/Ananke/LAVAflow/devel/branches/dfenn/prototyping/vtkExamples/vtk_minimal/: vtk_minimal.sln
src/Ananke/LAVAflow/devel/trunk/drivers/devel/: CMakeLists.txt
src/Ananke/LAVAflow/devel/trunk/drivers/devel/AveragingDriver/: Averaging.h
src/Ananke/LAVAflow/devel/trunk/drivers/devel/CASAnovaTools/GetSnapshotData/: CMakeLists.txt
src/Ananke/LAVAflow/devel/trunk/drivers/devel/ExportUniformData/: CMakeLists.txt
src/Ananke/LAVAflow/devel/trunk/drivers/devel/FractalDimension/: FractalDimension.cxx
src/Ananke/LAVAflow/devel/trunk/drivers/devel/GetTurbStats/: CMakeLists.txt  CollectAndOutput.cxx  config
src/Ananke/LAVAflow/devel/trunk/drivers/devel/MultiFractalDimension/: MultiFractalDimension.cxx
src/Ananke/LAVAflow/devel/trunk/drivers/devel/SNBinary/: CMakeLists.txt  CommonSNBinary.h
src/Ananke/LAVAflow/devel/trunk/drivers/devel/SNBinary/ContaminationSNBinary/: ContaminationSNBinary.cxx
src/Ananke/LAVAflow/devel/trunk/drivers/devel/SaveClusterMesh/: CMakeLists.txt  IO.h  SaveClusterMesh.cxx
src/Ananke/LAVAflow/devel/trunk/drivers/devel/TrackClusters/: FlashIndexing.cxx  TrackClustersMassTracers.cxx  TrackClustersMassTracers.h  TrackClustersParticlesMT.cxx  config  particleStuff.cpp
src/Ananke/LAVAflow/devel/trunk/drivers/devel/driverDevel/: CMakeLists.txt
src/Ananke/LAVAflow/devel/trunk/libsrc/Driver/: CMakeLists.txt  Driver_finalize.cxx
src/Ananke/LAVAflow/devel/trunk/libsrc/Geometry/: CMakeLists.txt
src/Ananke/LAVAflow/devel/trunk/libsrc/Geometry/HEMesh/: HEEdge.h  HEFace.cxx
src/Ananke/LAVAflow/devel/trunk/libsrc/Mesh/: CMakeLists.txt  FlashAmrMesh.cxx  FlashAmrMesh.h  Mesh.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/: CMakeLists.txt
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Geometry/: intersectionPolyhedronPlane.cxx
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Geometry/HEMesh/: HEDataStructure.h  HEVertex.cxx
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Graph/: CMakeLists.txt  Graph.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Math/: dot.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Operators/: ContourOperator.cxx.bak  Operator.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Operators/shellAveraging/planeShells/: ShellAveragePlaneOperator.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Operators/surfaceAveraging/: SurfaceAverageOperator.h
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Readers/: FlashReader.cxx  VTKReader.cxx
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Statistics/: CMakeLists.txt
src/LAVAflow/archive/LAVAflow_July082015/libsrc/Statistics/Histogram/: HistObj.h  Histogram.h
src/LAVAflow/archive/LAVAflow_Oct012015/libsrc/Math/: CMakeLists.txt  LAVAMath.h  legendre.h
src/LAVAflow/devel/branches/dfenn/Tests/: CMakeLists.txt  EnergyDissipationTest.cxx  FlashAMRTest.cxx  HistogramTest.cxx  InterpolationTest.cxx  RichardsonNumber.cxx  ShockSurfaceDecomposition.cxx  SignatureBergerTest.cxx
src/LAVAflow/devel/trunk/drivers/devel/FlashParticlesTest/: CMakeLists.txt  FlashParticlesTest.cxx
src/LAVAflow/devel/trunk/drivers/devel/UniformRefinementTest/: CMakeLists.txt  UniformRefinementTest.cxx
test/: circumtest.m  intm2.m  predict_test.m
(+1440 files in other folders)
