cmake_minimum_required(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "Debug")
MESSAGE("Flags " ${CMAKE_CXX_FLAGS})
SET(VTK_DIR "/opt/software/libs/src/vtk5.10.0/build")

PROJECT(LAVAflow) 

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})

SET( STOP_ON_FIRST_ERROR "-Wfatal-errors")
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${STOP_ON_FIRST_ERROR}" )

ADD_SUBDIRECTORY(${LAVAflow_SOURCE_DIR}/libsrc) 
ADD_SUBDIRECTORY(${LAVAflow_SOURCE_DIR}/Tests)
