ADD_EXECUTABLE(AutocorrelationTest AutocorrelationTest.cxx)
#ADD_EXECUTABLE(FlashAMRTest FlashAMRTest.cxx)
#ADD_EXECUTABLE(MultiplyOperatorTest MultiplyOperatorTest.cxx)
#ADD_EXECUTABLE(ContourOperatorTest ContourOperatorTest.cxx)
#ADD_EXECUTABLE(SurfaceAreaOperatorTest SurfaceAreaOperatorTest.cxx)
#ADD_EXECUTABLE(CurvatureOperatorTest CurvatureOperatorTest.cxx)
#ADD_EXECUTABLE(ShellAveragePlaneTest ShellAveragePlaneTest.cxx)
#ADD_EXECUTABLE(MeshTest MeshTest.cxx)
#ADD_EXECUTABLE(HalfEdgeTest HalfEdgeTest.cxx)
#ADD_EXECUTABLE(DerivativeTest DerivativeTest.cxx)

#ADD_EXECUTABLE(SphericalHarmonicTest SphericalHarmonicTest.cxx)

#ADD_EXECUTABLE(Flux2d Flux2d.cxx)
#ADD_EXECUTABLE(ExplosionStatistics2d ExplosionStatistics2d.cxx)
#ADD_EXECUTABLE(SphericalSpectra SphericalSpectra.cxx)
#ADD_EXECUTABLE(DetectUpDownDrafts DetectUpDownDrafts.cxx)
#ADD_EXECUTABLE(ReynoldsStresses ReynoldsStresses.cxx)
#ADD_EXECUTABLE(SignatureBergerTest SignatureBergerTest.cxx)
#ADD_EXECUTABLE(ClusteringAnalysis ClusteringAnalysis.cxx)
#ADD_EXECUTABLE(ParticleTest ParticleTest.cxx)
#ADD_EXECUTABLE(ScalarListTest ScalarListTest.cxx)
#ADD_EXECUTABLE(EnergyDissipationTest EnergyDissipationTest.cxx)
#ADD_EXECUTABLE(EulerianStructure EulerianStructure.cxx)
#ADD_EXECUTABLE(InterpolationTest InterpolationTest.cxx)
#ADD_EXECUTABLE(RichardsonNumber RichardsonNumber.cxx)
#ADD_EXECUTABLE(ShockSurfaceDecomposition ShockSurfaceDecomposition.cxx)
#ADD_EXECUTABLE(ProjectDrafts ProjectDrafts.cxx)
#ADD_EXECUTABLE(ResidencyTimes ResidencyTimes.cxx)
#ADD_EXECUTABLE(HistogramTest HistogramTest.cxx)
#ADD_EXECUTABLE(ScalarReadTest ScalarReadTest.cxx)

TARGET_LINK_LIBRARIES(AutocorrelationTest LAVAflow ${VTK_LIBRARIES} ${MPI_LIBRARIES})
#TARGET_LINK_LIBRARIES(FlashAMRTest LAVAflow ${VTK_LIBRARIES} ${MPI_LIBRARIES})
#TARGET_LINK_LIBRARIES(MultiplyOperatorTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ContourOperatorTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(SurfaceAreaOperatorTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(CurvatureOperatorTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ShellAveragePlaneTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(MeshTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(HalfEdgeTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(DerivativeTest LAVAflow ${VTK_LIBRARIES})

#TARGET_LINK_LIBRARIES(SphericalHarmonicTest LAVAflow ${VTK_LIBRARIES})

#TARGET_LINK_LIBRARIES(Flux2d LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ExplosionStatistics2d LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(SphericalSpectra LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(DetectUpDownDrafts LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ReynoldsStresses LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(SignatureBergerTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ClusteringAnalysis LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ScalarListTest LAVAflow ${VTK_LIBRARIES})
#
#TARGET_LINK_LIBRARIES(ParticleTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(EnergyDissipationTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(EulerianStructure LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(InterpolationTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(RichardsonNumber LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ShockSurfaceDecomposition LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ProjectDrafts LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ResidencyTimes LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(HistogramTest LAVAflow ${VTK_LIBRARIES})
#TARGET_LINK_LIBRARIES(ScalarReadTest LAVAflow ${VTK_LIBRARIES})

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	SET(GCC_C++11_COMPILE_FLAGS "-std=gnu++11")
	SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_C++11_COMPILE_FLAGS}" )
else()
	MESSAGE("Not using gnu compiler. Compilation may fail if compiler does not support c++11 without additional flags.")
endif()

