ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/FlashAMRTest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/driverDevel)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/FlashParticlesTest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/GetTurbStats)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/AveragingDriver)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/FloodFillTest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/AutocorrelationTest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/UniformRefinementTest)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ExportUniformData)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/CASAnovaTools)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SaveClusterMesh)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TrackClusters)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/EnergyDecomp)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/FractalDimension)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/MultiFractalDimension)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ClusterMassDistribution)
