list(APPEND LAVAflow_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${LAVAflow_INCLUDES})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ColDensSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ContaminationSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/EintTempSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/EintTimeSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RadialDistributionSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/StrippedMassSNBinary)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/VelDistSNBinary)

#get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
#foreach(dir ${dirs})
#  message(STATUS "dir='${dir}'")
#endforeach()
